# bilibili-my-favorite

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  FRONTEND_README.md  LICENSE  README.md  bilibili_favorites.db  check_db.py  database.py  main.py  pyproject.toml  web_server.py
.cursor/rules/: project-base.mdc
docker/: docker-compose.yml
docs/: README.md  api.md  develop.md
src/: cli.py
src/bilibili_my_favorite/: __init__.py  app.py
src/bilibili_my_favorite/api/: __init__.py  collections.py  models.py  tasks.py  videos.py
src/bilibili_my_favorite/core/: bilibili_plus.py  config.py  credential.py
src/bilibili_my_favorite/dao/: __init__.py  base.py  collection_dao.py  task_dao.py  video_dao.py
src/bilibili_my_favorite/models/: database.py  database_migration.py  task_models.py  types.py
src/bilibili_my_favorite/services/: __init__.py  bilibili_service.py  optimized_sync_service.py  sync_context.py  sync_service.py  task_executor.py  task_manager.py  video_download_service.py
src/bilibili_my_favorite/utils/: __init__.py  downloader.py  encoding.py  logger.py
static/: task-indicator.js
templates/: collection_detail.html  error_404.html  error_500.html  index.html  stats.html  sync.html  tasks.html
tests/collection/: get_favorite_lists.py
tests/videos/: get_infio.py  simple_download.py  simple_get_video_info.py
